<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <include layout="@layout/background_image" android:id="@+id/imageView"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="10dp">

    <!--KONTAINER FOR QUIZZER OG KATEGORIER-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp">

       <!--XP-->
        <fragment
            android:id="@+id/fragmentXp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.example.erlend.quizzapp.customView.FragmentXp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacingStatContainer" />

        <!--QUIZZER-->
            <LinearLayout
                android:id="@+id/rootStatGeneral"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/headerCurrentQuizz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/styleStatheader"
                    android:text="@string/headerStatTotal" />
                <!--Antall spørsmål-->
                <com.example.erlend.quizzapp.customView.StatRow
                    android:id="@+id/statRowQuestions"
                    custom:rowName="@string/statNumQuestions"
                    android:layout_width="@dimen/widthStatRow"
                    android:layout_height="wrap_content">
                </com.example.erlend.quizzapp.customView.StatRow>

                <!--Ritkige-->
                <com.example.erlend.quizzapp.customView.StatRow
                    android:id="@+id/statRowCorrectQuestions"
                    custom:rowName="@string/statNumCorrectAnswers"
                    android:layout_width="@dimen/widthStatRow"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/statRowQuestions">
                </com.example.erlend.quizzapp.customView.StatRow>

                <!--Feil-->
                <com.example.erlend.quizzapp.customView.StatRow
                    android:id="@+id/statRowWrongQuestions"
                    custom:rowName="@string/statWrongAnswers"
                    android:layout_width="@dimen/widthStatRow"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/statRowCorrectQuestions">
                </com.example.erlend.quizzapp.customView.StatRow>

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_stat_row" />

                <!--Antall quizzer-->
                <com.example.erlend.quizzapp.customView.StatRow
                    android:id="@+id/statRowQuizzes"
                    custom:rowName="@string/statRowQuizzes"
                    android:layout_width="@dimen/widthStatRow"
                    android:layout_height="wrap_content" />

                    <!--Quizzer med alle riktige-->
                <com.example.erlend.quizzapp.customView.StatRow
                android:id="@+id/statRowQuizzesAllCorrect"
                custom:rowName="@string/statRowQuizzesAllCorrect"
                android:layout_width="@dimen/widthStatRow"
                android:layout_height="wrap_content" />

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_stat_row" />

                <!--Tidbruk-->

                <com.example.erlend.quizzapp.customView.StatRow
                    android:id="@+id/statRowTimeUsage"
                    custom:rowName="@string/statRowTimeUsage"
                    android:layout_width="@dimen/widthStatRow"
                    android:layout_height="wrap_content">
                </com.example.erlend.quizzapp.customView.StatRow>

            </LinearLayout>



        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacingStatContainer" />

        <!--KATEGORIER-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rootStatGeneral"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/colorLightBlue"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/headerStatCategory"
                style="@style/styleStatheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statHeaderCategories" />

            <!--INFO OM HVER ENKELT KATEGORI-->
            <ScrollView
                android:id="@+id/scrollviewForeachCategory"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:fillViewport="true"
                android:fadeScrollbars="false"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:id="@+id/rootStatCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    tools:background="@color/colorgreen"
                    android:gravity="center_horizontal"
                    tools:layout_width="match_parent"
                    tools:layout_height="100dp">
                </LinearLayout>

            </ScrollView>

            <!--GENERELL INFO OM KATEGORIENE -->

                <com.example.erlend.quizzapp.customView.StatRow
                    android:id="@+id/statRowCategoryMostCorrect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    custom:rowName="@string/statCategoryMostCorrect" />

                <com.example.erlend.quizzapp.customView.StatRow
                    android:id="@+id/statRowCategoryMostWrong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    custom:rowName="@string/statCategoryMostWrong" />

                <com.example.erlend.quizzapp.customView.StatRow
                    android:id="@+id/statRowCategoryMostQuizzes"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    custom:rowName="@string/statCategoryMostQuizzes" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacingStatContainer" />


        </LinearLayout>



        </LinearLayout>


    </ScrollView>


    <include android:id="@+id/bottomNavStatActivity" layout="@layout/fragment_bottom_navigation"></include>

</RelativeLayout>
